ui_tests/type_def_res_3.box
type FieldTy {}

type Foo {
    field: FieldTy,
}

type Bar {
    | Baz { field: FieldTy }
}

fn foo() {
    new Foo {
        field_awd: new FieldTy {},
    };

    new Bar {
        field: 10,
    };

    new Bar::Bazz {};

    new Blah {};
}